# push_swap

./: .gitignore  CMakeLists.txt  Makefile  cheatlist  checker  gen  main.c  norm.txt  push_swap  sort.c  sorter.h  test.sh
check/: checker.h  error.c  main.c
checker/: checker.h  main.c
push/: accessories.c  calc_shortest_way_len.c  fill_one.c  main.c  process_put.c  sort.c  sorter.h
push_swap_lib/: Makefile  error.c  game_wrapper.c  game_wrapper2.c  game_wrapper3.c  game_wrapper4.c  game_wrapper5.c  game_wrapper6.c  parse_argv.c  pstack.c  pstack.h  push_swap_lib  pushswap.c  pushswap.h
utilities/: ft_atoi.c  ft_itoa.c  memset.c  strncpy.c  strsplitchrset.c  utilities.h  xmalloc.c
utilities_lib/: Makefile  charptrptrdel.c  ft_atoi.c  ft_itoa.c  max.c  memcpy.c  memset.c  strcmp.c  strncmp.c  strncpy.c  strnew.c  strsplitchrset.c  strsub.c  utilities.h  xmalloc.c
